# contract-governor

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
config/: schema.json  template_schema.json
config/examples/: evidence-query_v1.yaml  evidence-query_v2.yaml  evidence-query_v2_template.yaml
contract_governor/: __init__.py  logging.py
contract_governor/config/: __init__.py  app_config.yaml  defaults.py  di_config.yaml  field_validator.py  loader.py  manager.py  sources.py  utils.py
contract_governor/core/: __init__.py  contract_categorizer.py  contract_governor.py  errors.py  manifest.py  models.py  monitoring.py  registry.py  stipulation_linker.py  stipulation_processor.py  template_models.py
contract_governor/di/: __init__.py  container.py  decorators.py  factory.py  registry.py  setup.py
contract_governor/discovery/: __init__.py
contract_governor/entitlements/: __init__.py  entitlement_generator.py  models.py
contract_governor/extensions/: __init__.py  fastapi_extension.py
contract_governor/integrations/: __init__.py  catalog_providers.py  django_server.py  fastapi_error_handlers.py  fastapi_server.py  flask_server.py  framework_registry.py  monitoring_endpoints.py  scalar_renderer.py
contract_governor/interfaces/: __init__.py  catalog_server.py  configuration_source.py  contract_linker.py  contract_registry.py  contract_source.py  documentation_renderer.py  serving_concerns.py  transformation_concerns.py  transformer.py  validation_concerns.py  validator.py
contract_governor/loaders/: __init__.py  contract_loader.py  s3_loader.py
contract_governor/transformation/: __init__.py  audit_utils.py  pipeline.py  transformers.py  url_template_resolver.py
contract_governor/validation/: __init__.py  openapi_validator.py  pipeline.py  validators.py
docs/: ARCHITECTURE.md  DEPLOYMENT_TARGETING.md  USAGE.md
docs/sphinx/: CHANGELOG.md  README.md  conf.py  index.rst
docs/sphinx-user/: changelog.md  cli-tools.md  concepts.md  conf.py  configuration-reference.md  deployment.md  exposure-policies.md  getting-started.md  index.rst  monitoring.md  stipulations.md  templates.md  troubleshooting.md
docs/sphinx/api/: logging.rst
docs/sphinx/api/config/: defaults.rst  field_validator.rst  loader.rst  manager.rst  sources.rst  utils.rst
docs/sphinx/api/core/: contract_categorizer.rst  contract_governor.rst  errors.rst  manifest.rst  models.rst  monitoring.rst  registry.rst  stipulation_linker.rst  stipulation_processor.rst  template_models.rst
docs/sphinx/api/di/: container.rst  decorators.rst  factory.rst  registry.rst  setup.rst
docs/sphinx/api/entitlements/: entitlement_generator.rst  models.rst
docs/sphinx/api/extensions/: fastapi_extension.rst
docs/sphinx/api/integrations/: catalog_providers.rst  django_server.rst  fastapi_error_handlers.rst  fastapi_server.rst  flask_server.rst  framework_registry.rst  monitoring_endpoints.rst  scalar_renderer.rst
docs/sphinx/api/interfaces/: catalog_server.rst  configuration_source.rst  contract_linker.rst  contract_registry.rst  contract_source.rst  documentation_renderer.rst  serving_concerns.rst  transformation_concerns.rst  transformer.rst  validation_concerns.rst  validator.rst
docs/sphinx/api/loaders/: contract_loader.rst  s3_loader.rst
examples/: contract_stipulation_example.py  contract_transformation.py  contract_validation.py
tests/: __init__.py  test_field_validator.py  test_route_sorting.py
(+7 files in other folders)
